# pypkg42

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pypkg42/: __init__.py  __main__.py  cli.py
src/pypkg42/config/: __init__.py  config.toml
src/pypkg42/core/: __init__.py  add.py  fib_c.c  fib_py.py
tests/: test_add.py
