[project]
name = "pypkg42"
version = "1.4.1"
description = "A modern Python package sample demonstrating standard practices."
authors = [{ name = "HuaTsai", email = "huatsai42@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.6", "pyfiglet>=1.0.4"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pypkg42 = ["config/config.toml"]

[tool.setuptools]
ext-modules = [
    {name = "pypkg42.core.fib_c", sources = ["src/pypkg42/core/fib_c.c"]}
]

[project.urls]
Repository = "https://github.com/HuaTsai/pypkg42.git"

[project.scripts]
pypkg42 = "pypkg42.cli:main"

[project.optional-dependencies]
plot = ["matplotlib>=3.10.7"]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.14.3"]

[tool.pytest.ini_options]
addopts = ["--verbose"]

[tool.ruff]
line-length = 100
lint.extend-select = ["E", "W", "F", "I", "C", "B", "N", "UP", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
